[gd_scene load_steps=6 format=3 uid="uid://br50uegnqyt2m"]

[ext_resource type="Texture2D" uid="uid://dsn1gjiqevnue" path="res://tilemaps/tileset_sunnysideworld/output_tileset.png" id="1_8u8rf"]
[ext_resource type="Script" path="res://scripts/Shop.gd" id="1_w6is7"]
[ext_resource type="PackedScene" uid="uid://c1pnyhes6l2pv" path="res://interaction/interaction_area.tscn" id="3_l4b5y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4r2g"]
size = Vector2(29, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_rh2y2"]
radius = 28.0

[node name="shopTool" type="StaticBody2D"]
y_sort_enabled = true
position = Vector2(0, -2)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_w6is7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3.5)
shape = SubResource("RectangleShape2D_e4r2g")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8u8rf")
region_enabled = true
region_rect = Rect2(744, 360, 32, 20)

[node name="InteractionArea" parent="." instance=ExtResource("3_l4b5y")]
visible = false
action_name = "crafting"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_rh2y2")
debug_color = Color(0.572549, 0.552941, 0.196078, 0.419608)

[connection signal="leave_area" from="InteractionArea" to="." method="_on_interaction_area_leave_area"]
